--- a/trail..ipynb
+++ b/trail..ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,36 @@
     "from langchain.embeddings import HuggingFaceEmbeddings \n",
     "from langchain.vectorstores import Pinecone\n",
     "import pinecone\n",
-    "from langchain.document_loaders import PyMuPDFLoader, DirectoryLoader # For loading documents\n",
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader # For loading documents\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter # For splitting text (corpus) into smaller chunks\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import CTransformers # Using ctransfomers since we are using a quantized model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = \"d0ccc28f-3d45-4cff-989a-ff83b043add8\"\n",
+    "PINECONE_API_ENV = \"us-east-1-aws\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract data from the PDF\n",
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data,\n",
+    "                    glob = \"*.pdf\",\n",
+    "                    loader_cls = PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "    return documents"
    ]
   }
  ],
