Creating a vector database with Pinecone API

--- a/trail.ipynb
+++ b/trail.ipynb
@@ -19,34 +19,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain import PromptTemplate\n",
     "from langchain.chains import RetrievalQA # For question answering\n",
     "from langchain.embeddings import HuggingFaceEmbeddings \n",
-    "from langchain.vectorstores import Pinecone\n",
-    "import pinecone\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
     "from langchain.document_loaders import PyPDFLoader, DirectoryLoader # For loading documents\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter # For splitting text (corpus) into smaller chunks\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms import CTransformers # Using ctransfomers since we are using a quantized model\n"
+    "from langchain.llms import CTransformers # Using ctransfomers since we are using a quantized model\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PINECONE_API_KEY = \"d0ccc28f-3d45-4cff-989a-ff83b043add8\"\n",
-    "PINECONE_API_ENV = \"us-east-1-aws\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +783,7 @@
        "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -821,6 +811,44 @@
     "query_result = embeddings.embed_query(\"Hello world\")\n",
     "print(\"Length\", len(query_result))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = \"d0ccc28f-3d45-4cff-989a-ff83b043add8\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['PINECONE_API_KEY'] = \"d0ccc28f-3d45-4cff-989a-ff83b043add8\"\n",
+    "\n",
+    "index_name = \"medical-chatbot\"\n",
+    "\n",
+    "vectorstore = PineconeVectorStore.from_documents(split_data, embeddings, index_name = index_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
